--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -4,7 +4,7 @@
   <div class="container">
     <a class="navbar-brand" href="{% url 'posts:index' %}">
       <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-      <span style="color:red">Py</span>Blog
+      <span style="color:red">Py</span>Blog - #<span style="color:red">каждый</span>может
     </a>
     <button 
       class="navbar-toggler my-3"
