--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -28,6 +28,7 @@
               action="{% url 'posts:create' %}" 
           {% endif %}} enctype="multipart/form-data">
           {% csrf_token %}
+          {{ form.media }}
           {% for field in form %}<div class="form-group row my-3"
             {% if field.field.required %} 
               aria-required="true"
