--- a/yatube/templates/posts/includes/paginator.html
+++ b/yatube/templates/posts/includes/paginator.html
@@ -1,10 +1,14 @@
 <!-- templates/posts/includes/paginator.html -->
 <div class="d-flex justify-content-center">
 {% if page_obj.has_other_pages %}
-<nav aria-label="Page navigation" class="my-5">
+<nav aria-label="Page navigation">
   <ul class="pagination">
     {% if page_obj.has_previous %}
-      <li class="page-item"><a class="page-link" href="?page=1">Первая</a></li>
+        <li class="page-item">
+        <a class="page-link" href="?page=1">
+          Первая
+        </a>
+        </li>
       <li class="page-item">
         <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
           Предыдущая
