--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,31 +1,81 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
+{% load static %}
 {% block title %}
+    Профиль пользователя
     {% if author.get_full_name %}
         {{ author.get_full_name }}
     {% else %}
         {{ author }}
-    {% endif %} профайл пользователя
+    {% endif %}
 {% endblock %}
 {% block content %}
 
 <div class="row shadow-lg p-2 mb-2 bg-white rounded">
     <div class="card" style="width: 100%">
         <div class="card-body">
-            <h1 class="card-title">Все посты пользователя {% if author.get_full_name %}{{ author.get_full_name }}{% else %}{{ author }}{% endif %}</h1>
-            <h3 class="card-text">Всего постов: {{ page_obj.paginator.count }}</h3>
-            
-            {% if user.is_authenticated %}
-                {% if request.user != author %}
-                    {% if following %}
-                        <a class="btn btn-lg btn-light" href="{% url 'posts:profile_unfollow' author.username %}" role="button">Отписаться</a>
-                    {% else %}
-                        <a class="btn btn-lg btn-primary" href="{% url 'posts:profile_follow' author.username %}" role="button">Подписаться</a>
-                    {% endif %}
-                {% endif %}
-            {% endif %}
+            <h3 class="card-title">Профиль пользователя: {% if author.get_full_name %}{{ author.get_full_name }}{% else %}{{ author }}{% endif %}</h3>
+            <h5 class="card-title">
+                Публикаций: <strong>{{ page_obj.paginator.count }}</strong>
+                Подписчиков: <strong>{{ author.following.count }}</strong>
+                Подписок: <strong>{{ author.follower.count }}</strong>
+            </h5>
         </div>
     </div>
 
+<aside class="col-12 col-md-3">
+    <ul class="list-group list-group-flush">
+        {% if user.is_authenticated %}
+            {% if request.user != author %}
+            <li class="list-group-item text-center">
+                {% if following %}
+                    <a class="btn btn-lg btn-outline-danger btn-sm" href="{% url 'posts:profile_unfollow' author.username %}" role="button">Отписаться</a>
+                {% else %}
+                    <a class="btn btn-lg btn-outline-success btn-sm" href="{% url 'posts:profile_follow' author.username %}" role="button">Подписаться</a>
+                {% endif %}
+            </li>
+            {% endif %}
+        {% endif %}
+        <li class="list-group-item">
+            {% thumbnail profile.avatar "800x800" crop="center" upscale=True as small %}
+                <img class="img-fluid img-thumbnail mx-auto card-img" class="rounded" src="{{ small.url }}">
+            {% empty %}
+                <div class="col-md-12">
+                    <img class="img-fluid img-thumbnail mx-auto card-img" src="{% static 'img/no_img.png' %}" alt="нет фото">
+                </div>
+            {% endthumbnail %}
+        </li>
+        <li class="list-group-item">
+        Полное имя: <strong>{% if author.get_full_name %}{{ author.get_full_name }}{% else %}{{ author }}{% endif %}</strong>
+        </li>
+        {% if author.profile.location %}
+        <li class="list-group-item">
+        Проживание: <strong>{{ author.profile.location }}</strong>
+        </li>
+        {% endif %}
+        {% if profile.bio %}
+        <li class="list-group-item">
+        О себе: {{ profile.bio }}
+        </li>
+        {% endif %}
+        {% if author.profile.birth_date %}
+        <li class="list-group-item">
+        Дата рождения: <strong>{{ author.profile.birth_date }}</strong>
+        </li>
+        {% endif %}
+        <li class="list-group-item">
+        {% if user.is_authenticated %}
+                {% if request.user == author %}
+                    <a href="{% url 'users:update_profile' %}" class="link-light text-decoration-none" style="color: black;">
+                    <strong>Редактировать профиль</strong>
+                    </a>
+                {% endif %}
+        {% endif %}    
+        </li>
+    </ul>
+</aside>
+
+<article class="col-12 col-md-9">
     {% for post in page_obj %}
 
         <ul class="list-group shadow-lg p-1 mb-1 bg-white rounded">
@@ -42,8 +92,9 @@
             <a href="{% url 'posts:group_list' post.group.slug %}"><button type="button" class="btn btn-outline-primary btn-sm">Все записи группы {{ post.group }}</button></a>
             {% endif %}
         </div>
-        {% if not forloop.last %}<hr>{% endif %}
+        {% if not forloop.last %}{% endif %}
     {% endfor %}
     {% include 'posts/includes/paginator.html' %}
+</article>
 </div>
 {% endblock %}
