--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,6 +1,7 @@
 {% load static %}
+{% load thumbnail %}
 <header>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="{% url 'posts:index' %}">
       <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -27,27 +28,32 @@
         <a class="nav-link link-light {% if view_name == 'about:tech' %}active{% endif %}" href="{% url 'about:tech' %}">Технологии</a>
       </li>
       {% if user.is_authenticated %}
-      <li class="nav-item"> 
-        <a class="nav-link link-light {% if view_name == 'posts:create' %}active{% endif %}" href="{% url 'posts:create' %}">Новая запись</a>
-      </li>
-      <li class="nav-item"> 
-        <a class="nav-link link-light {% if view_name == 'users:password_change' %}active{% endif %}" href="{% url 'users:password_change' %}">Изменить пароль</a>
-      </li>
-      <li class="nav-item"> 
-        <a class="nav-link link-light {% if view_name == 'users:logout' %}active{% endif %}" href="{% url 'users:logout' %}">Выйти</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link link-light" href="{% url 'posts:user_profile' user.username %}" >
-        Пользователь: {{ user.username }}
-        </a>
-      </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light {% if view_name == 'posts:create' %}active{% endif %}" href="{% url 'posts:create' %}">Новая запись</a>
+        </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light {% if view_name == 'users:password_change' %}active{% endif %}" href="{% url 'users:password_change' %}">Изменить пароль</a>
+        </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light {% if view_name == 'users:logout' %}active{% endif %}" href="{% url 'users:logout' %}">Выйти</a>
+        </li>
+        <li class="nav-item bg-light rounded">
+          <a class="nav-link link-light" href="{% url 'posts:profile' user.username %}" >
+          <strong style="color:black;">@{{ user.username }}</strong>
+          {% thumbnail user.profile.avatar "800x800" crop="center" upscale=True as avatar_head %}
+            <img width="30" height="30" class="rounded img-fluid" src="{{ avatar_head.url }}">
+          {% empty %}
+            <img width="30" height="30" class="rounded img-fluid" src="{% static 'img/no_img.png' %}" alt="нет фото">
+          {% endthumbnail %}
+          </a>
+        </li>
       {% else %}
-      <li class="nav-item"> 
-        <a class="nav-link link-light {% if view_name == 'users:login' %}active{% endif %}" href="{% url 'users:login' %}">Войти</a>
-      </li>
-      <li class="nav-item"> 
-        <a class="nav-link link-light {% if view_name == 'users:signup' %}active{% endif %}" href="{% url 'users:signup' %}">Регистрация</a>
-      </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light {% if view_name == 'users:login' %}active{% endif %}" href="{% url 'users:login' %}">Войти</a>
+        </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light {% if view_name == 'users:signup' %}active{% endif %}" href="{% url 'users:signup' %}">Регистрация</a>
+        </li>
       {% endif %}
       {% endwith %}
     </ul>
