--- a/yatube/templates/posts/includes/post_block.html
+++ b/yatube/templates/posts/includes/post_block.html
@@ -1,11 +1,13 @@
 {% load thumbnail %}
 {% load static %}
 <div class="card shadow-lg p-1 mb-1 bg-white rounded" style="width: 100%">
-    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+    {% thumbnail post.image "960x239" crop="center" upscale=True as im %}
+        <a href="{% url 'posts:post_detail' post.id %}" class="link-light text-decoration-none" style="color: black;">
         <img class="card-img-top" src="{{ im.url }}">
+        </a>
     {% endthumbnail %}
     <div class="card-body">
-        <h4 class="card-title">
+        <h4 class="card-title p-1 mb-1 bg-white rounded">
         | <a href="{% url 'posts:post_detail' post.id %}" class="link-light text-decoration-none" style="color: black;">
         {{ post.title }}
         </a> | 
