--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -3,6 +3,8 @@
 {% block content %}
 <div class="row shadow-lg p-2 mb-2 bg-white rounded">
   {% include 'posts/includes/switcher.html' with index=True %}
+  {% load cache %}
+  {% cache 60 index_page page_obj %}
   {% for post in page_obj %}
     {% include 'posts/includes/ul_posts.html' %}
     {% include 'posts/includes/post_block.html' %}
@@ -19,6 +21,7 @@
 
     {% if not forloop.last %}{% endif %}
   {% endfor %}
+  {% endcache %}
   {% include 'posts/includes/paginator.html' %}
 </div>
 {% endblock %}
