--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -11,7 +11,7 @@
         <img class="card-img-top" src="{{ im.url }}">
       {% endthumbnail %}
       <div class="card-body">
-        <h4 class="card-title">        
+        <h4 class="card-title">
         | {{ post.title }} | 
         {% if post.author == requser %}
         <a href="{% url 'posts:edit' post.id %}" class="link-light text-decoration-none">
@@ -59,7 +59,7 @@
       <div class="card shadow-lg p-2 mb-2 bg-white rounded" style="max-width: 100%;">
         <div class="row p-2 mb-2">
           <div class="col-md-2">
-            {% thumbnail comment.author.profile.avatar "x800" as small_comm %}
+            {% thumbnail comment.author.profile.avatar "800x800" crop="center" upscale=True as small_comm %}
               <img class="img-fluid img-thumbnail mx-auto card-img" src="{{ small_comm.url }}">
             {% empty %}
               <img class="img-fluid img-thumbnail mx-auto card-img" src="{% static 'img/no_img.png' %}" alt="нет фото">
