--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -2,6 +2,9 @@
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
 <div class="row shadow-lg p-2 mb-2 bg-white rounded">
+{% include 'posts/includes/aside_list.html' %}
+<article class="col-12 col-md-9">
+<div class="row shadow-lg p-2 mb-2 bg-white rounded">
   {% include 'posts/includes/switcher.html' with index=True %}
   {% load cache %}
   {% cache 60 index_page page_obj %}
@@ -23,5 +26,7 @@
   {% endfor %}
   {% endcache %}
   {% include 'posts/includes/paginator.html' %}
+</div>
+</div>
 </div>
 {% endblock %}
